Otimização de imagens da intro

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <main class="intro-bg">
     <div class="intro">
-      <img src="./src/img/dec/monograma-light.png" alt="Emanuele & Lucas" width="220" height="163">
+      <img src="./src/img/dec/monograma.svg" alt="Emanuele & Lucas" width="400" height="292">
     </div>
   </main>
 
