--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +14,12 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script type="module" src="./src/scripts/main.js"></script>
 </head>
+
 <body id="index">
   <header class="header-bg">
     <div class="header">
@@ -29,7 +31,7 @@
             <li><a href="#presenca">Confirme sua presença!</a></li>
           </ul>
         </div>
-      </nav>  
+      </nav>
 
       <div id="menu-toggle">
         <span></span>
@@ -56,13 +58,18 @@
     </nav>
   </header>
 
-
-
   <main class="intro-bg">
     <div class="intro">
       <img src="./src/img/dec/monograma.svg" alt="Emanuele & Lucas" width="400" height="292">
     </div>
   </main>
 
+  <article class="countdown-bg">
+    <div class="countdown">
+      <span id="counter" class="font-1-xxl p6"></span>
+    </div>
+  </article>
+
 </body>
+
 </html>
