Teste de ajuste no tamanho do menu mobile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Manu & Lucas</title>
+  <title>Emanuele & Lucas</title>
   <meta name="description" content="Estamos prestes a viver um dos dias mais especiais da nossa vida — e queremos você ao nosso lado! Aqui você encontra todos os detalhes do nosso casamento.">
   <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
 
