Correção final header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script type="module" src="./src/scripts/main.js"></script>
 </head>
 
@@ -42,7 +41,7 @@
 
       <div class="header-menu-right">
         <ul class="font-1-m c1">
-          <li><a href="#presentes">Escolha seu presente</a></li>
+          <li class=""><a href="#presentes">Escolha seu presente</a></li>
           <li><a href="#carrinho"><img src="./src/img/icons/cart.svg" alt="Meu carrinho" width="24px" height="22px"></a></li>
         </ul>
       </div>
@@ -70,6 +69,14 @@
     </div>
   </article>
 
+  <!-- <article class="historia-bg" id="historia">
+    <div class="historia">
+      <div class="historia-container">
+        <h2 class="font-1-xl p5">Nossa História</h2>
+        <p class="font-2-p c12">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tellus orci, facilisis non erat congue, vestibulum rutrum ligula. Vivamus suscipit enim mauris, nec scelerisque erat vestibulum in. Donec venenatis, neque ut interdum euismod, eros odio consequat risus, vitae vestibulum velit nisi non turpis. In hac habitasse platea dictumst. Vestibulum sit amet lacus ante. Nullam malesuada urna elit, at accumsan dui tempus et. Integer lobortis ex eget faucibus luctus. Donec non ipsum vel lectus lobortis pellentesque. Nullam malesuada urna elit, at accumsan dui tempus et. Integer lobortis ex eget faucibus luctus. Donec non ipsum vel lectus lobortis pellentesque.</p>
+      </div>
+    </div>
+  </article> -->
 </body>
 
 </html>
