--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
 
   <script type="module" src="./src/scripts/main.js"></script>
 </head>
@@ -69,14 +69,20 @@
     </div>
   </article>
 
-  <!-- <article class="historia-bg" id="historia">
+  <article class="historia-bg" id="historia">
     <div class="historia">
-      <div class="historia-container">
-        <h2 class="font-1-xl p5">Nossa História</h2>
-        <p class="font-2-p c12">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tellus orci, facilisis non erat congue, vestibulum rutrum ligula. Vivamus suscipit enim mauris, nec scelerisque erat vestibulum in. Donec venenatis, neque ut interdum euismod, eros odio consequat risus, vitae vestibulum velit nisi non turpis. In hac habitasse platea dictumst. Vestibulum sit amet lacus ante. Nullam malesuada urna elit, at accumsan dui tempus et. Integer lobortis ex eget faucibus luctus. Donec non ipsum vel lectus lobortis pellentesque. Nullam malesuada urna elit, at accumsan dui tempus et. Integer lobortis ex eget faucibus luctus. Donec non ipsum vel lectus lobortis pellentesque.</p>
+      <div class="flower-2-left">
+        <img src="./src/img/dec/flower-2-left.svg" alt="" width="292" height="253">
+      </div>
+      <h2 class="font-1-xl p6">Nossa História</h2>
+      <p class="font-2-m c11">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tellus orci, facilisis non erat congue, vestibulum rutrum ligula. Vivamus suscipit enim mauris, nec scelerisque erat vestibulum in. Donec venenatis, neque ut interdum euismod, eros odio consequat risus, vitae vestibulum velit nisi non turpis. In hac habitasse platea dictumst. Vestibulum sit amet lacus ante. Nullam malesuada urna elit, at accumsan dui tempus et. Integer lobortis ex eget faucibus luctus. Donec non ipsum vel lectus lobortis pellentesque. Nullam malesuada urna elit, at accumsan dui tempus et. Integer lobortis ex eget faucibus luctus. Donec non ipsum vel lectus lobortis pellentesque. 
+      </p>
+      <div class="flower-2-right">
+        <img src="./src/img/dec/flower-2-right.svg" alt="" width="292" height="253">
       </div>
     </div>
-  </article> -->
+  </article>
 </body>
 
 </html>
