--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <article class="countdown-bg">
     <div class="countdown">
-      <span id="counter" class="font-1-xxl p5"></span>
+      <span id="counter" class="font-1-xxl c10"></span>
     </div>
   </article>
 
