Alteração texto nossa história

--- a/index.html
+++ b/index.html
@@ -75,9 +75,20 @@
         <img src="./src/img/dec/flower-2-left.svg" alt="" width="292" height="253">
       </div>
       <h2 class="font-1-xl p6">Nossa História</h2>
-      <p class="font-2-m c11">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tellus orci, facilisis non erat congue, vestibulum rutrum ligula. Vivamus suscipit enim mauris, nec scelerisque erat vestibulum in. Donec venenatis, neque ut interdum euismod, eros odio consequat risus, vitae vestibulum velit nisi non turpis. In hac habitasse platea dictumst. Vestibulum sit amet lacus ante. Nullam malesuada urna elit, at accumsan dui tempus et. Integer lobortis ex eget faucibus luctus. Donec non ipsum vel lectus lobortis pellentesque. Nullam malesuada urna elit, at accumsan dui tempus et. Integer lobortis ex eget faucibus luctus. Donec non ipsum vel lectus lobortis pellentesque. 
-      </p>
+      <div class="historia-text">
+        <p class="font-2-m c11">
+          Era 2020, a uma semana do início da pandemia e, após algumas trocas de DM, um convite para um chopinho em um sábado à noite. Dentre risos e horas de conversas profundas, perdemos as contas de quantos chopinhos tomamos naquela noite, tudo que sabemos é que praticamente fomos recolhidos pelas moças da limpeza do bar, que só esperavam irmos embora para poder fechar. Mal sabíamos que dali pra frente, tudo seria diferente, mas as horas de conversa fácil e riso frouxo davam alguma ideia sobre isso. 
+        </p>
+        <p class="font-2-m c11">
+          Nunca mais nos desgrudamos. No meio das incertezas da pandemia, a certeza que tínhamos era de que seguiríamos juntos dali em diante. O Lucas conheceu a Pandora, e talvez tenha se apaixonado ainda mais por ela do que pela mamãe dela (pelo menos a mamãe teve essa impressão 😅 mas como julgar? Ela é perfeita mesmo). Seguimos enfrentando uma pandemia, e dentre lives, máscaras e álcool em gel, nossa parceria foi aumentando. 
+        </p>
+        <p class="font-2-m c11">
+          Passou um ano, e uma decisão importante também ajudou a definir o rumo da nossa relação: uma mudança de cidade e estado. Recomeçamos a vida em um novo lugar, morando juntos. 
+        </p>
+        <p class="font-2-m c11">
+          Hoje, 5 anos depois daquele chopinho inofensivo em um sábado a noite, olhamos pra trás e vemos que construímos uma trajetória cheia de amor e cumplicidade. Certamente tivemos desafios pelo caminho (como tudo que vale a pena nessa vida), mas sempre escolhemos lutar pelo nosso amor. Agora, chegou a hora de olhar pra frente, para o futuro, e mal podemos esperar pelo grande passo que vai dar início a tudo isso: o nosso casamento! 
+        </p>
+      </div>
       <div class="flower-2-right">
         <img src="./src/img/dec/flower-2-right.svg" alt="" width="292" height="253">
       </div>
