--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
       </div>
     </div>
   </article>
+
+  <article class="galeria">
+    <img src="./src/img/pictures/1.jpg" alt="">
+    <img src="./src/img/pictures/2.jpg" alt="">
+    <img src="./src/img/pictures/3.jpg" alt="">
+    <img src="./src/img/pictures/4.jpg" alt="">
+    <img src="./src/img/pictures/5.jpg" alt="">
+    <img src="./src/img/pictures/6.jpg" alt="">
+    <img src="./src/img/pictures/7.jpg" alt="">
+    <img src="./src/img/pictures/8.jpg" alt="">
+    <img src="./src/img/pictures/9.jpg" alt="">
+    <img src="./src/img/pictures/10.jpg" alt="">
+    <img src="./src/img/pictures/11.jpg" alt="">
+    <img src="./src/img/pictures/12.jpg" alt="">
+  </article>
 </body>
 
 </html>
