--- a/index.html
+++ b/index.html
@@ -69,24 +69,24 @@
     </div>
   </article>
 
-  <article class="historia-bg" id="historia">
-    <div class="historia">
+  <article class="container-bg" id="historia">
+    <div class="container">
       <div class="flower-2-left">
         <img src="./src/img/dec/flower-2-left.svg" alt="" width="292" height="253">
       </div>
       <h2 class="font-1-xl p6">Nossa História</h2>
       <div class="historia-text">
         <p class="font-2-m c11">
-          Era 2020, a uma semana do início da pandemia e, após algumas trocas de DM, um convite para um chopinho em um sábado à noite. Dentre risos e horas de conversas profundas, perdemos as contas de quantos chopinhos tomamos naquela noite, tudo que sabemos é que praticamente fomos recolhidos pelas moças da limpeza do bar, que só esperavam irmos embora para poder fechar. Mal sabíamos que dali pra frente, tudo seria diferente, mas as horas de conversa fácil e riso frouxo davam alguma ideia sobre isso. 
+          Era 2020, a uma semana do início da pandemia e, após algumas trocas de DM, um convite para um chopinho em um sábado à noite. Dentre risos e horas de conversas profundas, perdemos as contas de quantos chopinhos tomamos naquela noite, tudo que sabemos é que praticamente fomos recolhidos pelas moças da limpeza do bar, que só esperavam irmos embora para poder fechar. Mal sabíamos que dali pra frente, tudo seria diferente, mas as horas de conversa fácil e riso frouxo davam alguma ideia sobre isso.
         </p>
         <p class="font-2-m c11">
-          Nunca mais nos desgrudamos. No meio das incertezas da pandemia, a certeza que tínhamos era de que seguiríamos juntos dali em diante. O Lucas conheceu a Pandora, e talvez tenha se apaixonado ainda mais por ela do que pela mamãe dela (pelo menos a mamãe teve essa impressão 😅 mas como julgar? Ela é perfeita mesmo). Seguimos enfrentando uma pandemia, e dentre lives, máscaras e álcool em gel, nossa parceria foi aumentando. 
+          Nunca mais nos desgrudamos. No meio das incertezas da pandemia, a certeza que tínhamos era de que seguiríamos juntos dali em diante. O Lucas conheceu a Pandora, e talvez tenha se apaixonado ainda mais por ela do que pela mamãe dela (pelo menos a mamãe teve essa impressão 😅 mas como julgar? Ela é perfeita mesmo). Seguimos enfrentando uma pandemia, e dentre lives, máscaras e álcool em gel, nossa parceria foi aumentando.
         </p>
         <p class="font-2-m c11">
-          Passou um ano, e uma decisão importante também ajudou a definir o rumo da nossa relação: uma mudança de cidade e estado. Recomeçamos a vida em um novo lugar, morando juntos. 
+          Passou um ano, e uma decisão importante também ajudou a definir o rumo da nossa relação: uma mudança de cidade e estado. Recomeçamos a vida em um novo lugar, morando juntos.
         </p>
         <p class="font-2-m c11">
-          Hoje, 5 anos depois daquele chopinho inofensivo em um sábado a noite, olhamos pra trás e vemos que construímos uma trajetória cheia de amor e cumplicidade. Certamente tivemos desafios pelo caminho (como tudo que vale a pena nessa vida), mas sempre escolhemos lutar pelo nosso amor. Agora, chegou a hora de olhar pra frente, para o futuro, e mal podemos esperar pelo grande passo que vai dar início a tudo isso: o nosso casamento! 
+          Hoje, 5 anos depois daquele chopinho inofensivo em um sábado a noite, olhamos pra trás e vemos que construímos uma trajetória cheia de amor e cumplicidade. Certamente tivemos desafios pelo caminho (como tudo que vale a pena nessa vida), mas sempre escolhemos lutar pelo nosso amor. Agora, chegou a hora de olhar pra frente, para o futuro, e mal podemos esperar pelo grande passo que vai dar início a tudo isso: o nosso casamento!
         </p>
       </div>
       <div class="flower-2-right">
@@ -109,6 +109,26 @@
     <img src="./src/img/pictures/11.jpg" alt="">
     <img src="./src/img/pictures/12.jpg" alt="">
   </article>
+
+  <article class="container-bg" id="orientacoes">
+    <div class="container orientacoes">
+      <div class="flower-2-left">
+        <img src="./src/img/dec/flower-2-left.svg" alt="" width="292" height="253">
+      </div>
+      <h2 class="font-1-xl p5">Orientações</h2>
+      <img src="./src/img/pictures/casarao.jpg" alt="Villa Casarão">
+      <div class="orientacoes-text">
+        <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-l c11">Villa Casarão</a>
+        <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-m c10">Rod. Baldicero Filomeno, 11789</a>
+        <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-m c10">Ribeirão da Ilha</a>
+        <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-m c10">Florianópolis - SC</a>
+      </div>
+      <div class="flower-2-right">  
+        <img src="./src/img/dec/flower-2-right.svg" alt="" width="292" height="253">
+      </div>
+    </div>
+  </article>
+
 </body>
 
 </html>
