--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <nav class="menu-desktop">
         <div class="header-menu-left">
           <ul class="font-1-m c1">
-            <li><a href="#historia">Nossa História</a></li>
-            <li><a href="#orientacoes">Orientações</a></li>
-            <li><a href="#presenca">Confirme sua presença!</a></li>
+            <li><a href="./historia.html">Nossa História</a></li>
+            <li><a href="./orientacoes.html">Orientações</a></li>
+            <li><a href="./rsvp.html">Confirme sua presença!</a></li>
           </ul>
         </div>
       </nav>
@@ -49,10 +49,10 @@
 
     <nav class="menu-mobile">
       <ul class="font-1-m c1">
-        <li><a href="#historia">Nossa História</a></li>
-        <li><a href="#orientacoes">Orientações</a></li>
-        <li><a href="#presentes">Escolha seu presente</a></li>
-        <li><a href="#presenca">Confirme sua presença!</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./orientacoes.html">Orientações</a></li>
+        <li><a href="./presentes.html">Escolha seu presente</a></li>
+        <li><a href="./rsvp.html">Confirme sua presença!</a></li>
       </ul>
     </nav>
   </header>
@@ -96,27 +96,29 @@
   </article>
 
   <article class="galeria">
-    <img src="./src/img/pictures/1.jpg" alt="">
-    <img src="./src/img/pictures/2.jpg" alt="">
-    <img src="./src/img/pictures/3.jpg" alt="">
-    <img src="./src/img/pictures/4.jpg" alt="">
-    <img src="./src/img/pictures/5.jpg" alt="">
-    <img src="./src/img/pictures/6.jpg" alt="">
-    <img src="./src/img/pictures/7.jpg" alt="">
-    <img src="./src/img/pictures/8.jpg" alt="">
-    <img src="./src/img/pictures/9.jpg" alt="">
-    <img src="./src/img/pictures/10.jpg" alt="">
-    <img src="./src/img/pictures/11.jpg" alt="">
-    <img src="./src/img/pictures/12.jpg" alt="">
+    <img src="./src/img/pictures/1.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/2.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/3.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/4.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/5.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/6.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/7.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/8.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/9.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/10.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/11.jpg" alt="" width="1600" height="1600">
+    <img src="./src/img/pictures/12.jpg" alt="" width="1600" height="1600">
   </article>
 
-  <article class="container-bg" id="orientacoes">
+  <!-- <article class="container-bg" id="orientacoes">
     <div class="container orientacoes">
       <div class="flower-2-left">
         <img src="./src/img/dec/flower-2-left.svg" alt="" width="292" height="253">
       </div>
       <h2 class="font-1-xl p5">Orientações</h2>
-      <img src="./src/img/pictures/casarao.jpg" alt="Villa Casarão">
+      <div class="orientacoes-img">
+        <img src="./src/img/pictures/casarao.jpg" alt="Villa Casarão" width="600" height="400">
+      </div>
       <div class="orientacoes-text">
         <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-l c11">Villa Casarão</a>
         <a href="https://maps.app.goo.gl/UAbNhJMKg85ArVV19" target="_blank" class="font-2-m c10">Rod. Baldicero Filomeno, 11789</a>
@@ -127,7 +129,31 @@
         <img src="./src/img/dec/flower-2-right.svg" alt="" width="292" height="253">
       </div>
     </div>
-  </article>
+  </article> -->
+
+  <footer>
+    <div class="links font-2-m c1"> 
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./orientacoes.html">Orientações</a></li>
+        <li><a href="./presentes.html">Escolha seu presente</a></li>
+        <li><a href="./rsvp.html">Confirme sua presença!</a></li>
+      </ul>
+    </div>
+    <div class="contato font-2-m c1">
+      <div class="contato-item">
+        <span>Busca um visual único para o seu projeto?</span>
+        <span>Solicite um site personalizado com design exclusivo!</span>
+      </div>
+      <div class="contato-item">
+        <a href="mailto: nathaliadagort@gmail.com">nathaliadagort@gmail.com</a>
+        <a href="https://wa.me/5547999356035">(47) 99935-6035</a>
+      </div>
+      <div class="contato-item">
+        <span>© 2025 Nathália Dagort Ferlin — Alguns direitos reservados.</span>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
