--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         <span>Solicite um site personalizado com design exclusivo!</span>
       </div>
       <div class="contato-item">
-        <a href="mailto: nathaliadagort@gmail.com">nathaliadagort@gmail.com</a>
-        <a href="https://wa.me/5547999356035">(47) 99935-6035</a>
+        <a href="mailto: nathaliadagort@gmail.com" target="_blank">nathaliadagort@gmail.com</a>
+        <a href="https://wa.me/5547999356035" target="_blank">(47) 99935-6035</a>
       </div>
       <div class="contato-item">
         <span>© 2025 Nathália Dagort Ferlin — Alguns direitos reservados.</span>
