Alterações de tamanho e header, início da codificação do RSVP

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="menu-desktop">
         <div class="header-menu-left">
           <ul class="font-1-m c1">
-            <li><a href="./historia.html">Nossa História</a></li>
+            <li><a href="./index.html">Nossa História</a></li>
             <li><a href="./orientacoes.html">Orientações</a></li>
             <li><a href="./rsvp.html">Confirme sua presença!</a></li>
           </ul>
@@ -40,16 +40,15 @@
       </div>
 
       <div class="header-menu-right">
-        <ul class="font-1-m c1">
+        <ul class="font-1-m p5">
           <li class=""><a href="#presentes">Escolha seu presente</a></li>
-          <li><a href="#carrinho"><img src="./src/img/icons/cart.svg" alt="Meu carrinho" width="24px" height="22px"></a></li>
         </ul>
       </div>
     </div>
 
     <nav class="menu-mobile">
       <ul class="font-1-m c1">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="./index.html">Nossa História</a></li>
         <li><a href="./orientacoes.html">Orientações</a></li>
         <li><a href="./presentes.html">Escolha seu presente</a></li>
         <li><a href="./rsvp.html">Confirme sua presença!</a></li>
@@ -98,15 +97,12 @@
   <article class="galeria">
     <img src="./src/img/pictures/1.jpg" alt="" width="1600" height="1600">
     <img src="./src/img/pictures/2.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/3.jpg" alt="" width="1600" height="1600">
     <img src="./src/img/pictures/4.jpg" alt="" width="1600" height="1600">
     <img src="./src/img/pictures/5.jpg" alt="" width="1600" height="1600">
     <img src="./src/img/pictures/6.jpg" alt="" width="1600" height="1600">
     <img src="./src/img/pictures/7.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/8.jpg" alt="" width="1600" height="1600">
     <img src="./src/img/pictures/9.jpg" alt="" width="1600" height="1600">
     <img src="./src/img/pictures/10.jpg" alt="" width="1600" height="1600">
-    <img src="./src/img/pictures/11.jpg" alt="" width="1600" height="1600">
     <img src="./src/img/pictures/12.jpg" alt="" width="1600" height="1600">
   </article>
 
@@ -131,26 +127,28 @@
     </div>
   </article> -->
 
-  <footer>
-    <div class="links font-2-m c1"> 
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./orientacoes.html">Orientações</a></li>
-        <li><a href="./presentes.html">Escolha seu presente</a></li>
-        <li><a href="./rsvp.html">Confirme sua presença!</a></li>
-      </ul>
-    </div>
-    <div class="contato font-2-m c1">
-      <div class="contato-item">
-        <span>Busca um visual único para o seu projeto?</span>
-        <span>Solicite um site personalizado com design exclusivo!</span>
+  <footer class="footer-bg">
+    <div class="footer">
+      <div class="links font-2-m c1"> 
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./orientacoes.html">Orientações</a></li>
+          <li><a href="./presentes.html">Escolha seu presente</a></li>
+          <li><a href="./rsvp.html">Confirme sua presença!</a></li>
+        </ul>
       </div>
-      <div class="contato-item">
-        <a href="mailto: nathaliadagort@gmail.com" target="_blank">nathaliadagort@gmail.com</a>
-        <a href="https://wa.me/5547999356035" target="_blank">(47) 99935-6035</a>
-      </div>
-      <div class="contato-item">
-        <span>© 2025 Nathália Dagort Ferlin — Alguns direitos reservados.</span>
+      <div class="contato font-2-m c1">
+        <div class="contato-item">
+          <span>Busca um visual único para o seu projeto?</span>
+          <span>Solicite um site personalizado com design exclusivo!</span>
+        </div>
+        <div class="contato-item">
+          <a href="mailto: nathaliadagort@gmail.com" target="_blank">nathaliadagort@gmail.com</a>
+          <a href="https://wa.me/5547999356035" target="_blank">(47) 99935-6035</a>
+        </div>
+        <div class="contato-item">
+          <span>© 2025 Nathália Dagort Ferlin — Alguns direitos reservados.</span>
+        </div>
       </div>
     </div>
   </footer>
