--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="header-menu-right">
-        <ul class="font-1-m p5">
+        <ul class="font-1-m botao-1">
           <li class=""><a href="#presentes">Escolha seu presente</a></li>
         </ul>
       </div>
