--- a/rsvp.html
+++ b/rsvp.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="header-menu-right">
-        <ul class="font-1-m p5">
+        <ul class="font-1-m botao-1">
           <li class=""><a href="#presentes">Escolha seu presente</a></li>
         </ul>
       </div>
@@ -64,27 +64,27 @@
       <form action=".">
         <div>
           <label for="nome" class="font-2-m p5">Nome completo</label>
-          <input type="text" id="nome" name="nome" placeholder="Insira seu nome" class="font-2-m p2" required>
+          <input type="text" id="nome" name="nome" placeholder="Insira seu nome" class="font-2-m c10" required>
         </div>
         <div>
           <label for="telefone" class="font-2-m p5">Telefone</label>
-          <input type="text" id="telefone" name="telefone" placeholder="(49) 99999-9999" class="font-2-m p2" required>
+          <input type="text" id="telefone" name="telefone" placeholder="(49) 99999-9999" class="font-2-m c10" required>
         </div>
         <div>
           <label for="email" class="font-2-m p5">E-mail</label>
-          <input type="email" id="email" name="email" placeholder="seuemail@mail.com" class="font-2-m p2" required>
+          <input type="email" id="email" name="email" placeholder="seuemail@mail.com" class="font-2-m c10" required>
         </div>
         <div class="quantidade-pessoas">
           <div>
             <label for="adultos" class="font-2-m p5">Quantos adultos?</label>
-            <input type="number" id="adultos" name="adultos" class="font-2-m p2" required>
+            <input type="number" id="adultos" name="adultos" class="font-2-m c10" required>
           </div>
           <div>
             <label for="criancas" class="font-2-m p5">Quantas crianças?</label>
-            <input type="number" id="criancas" name="criancas" class="font-2-m p2">
+            <input type="number" id="criancas" name="criancas" class="font-2-m c10">
           </div>
         </div>
-        <button type="submit">Confirmar</button>
+        <button type="submit" class="font-2-m botao-2">Confirmar</button>
       </form> 
     </div>
   </main>
