Alteração formulário RSVP

--- a/rsvp.html
+++ b/rsvp.html
@@ -74,15 +74,13 @@
           <label for="email" class="font-2-m p5">E-mail</label>
           <input type="email" id="email" name="email" placeholder="seuemail@mail.com" class="font-2-m c10" required>
         </div>
-        <div class="quantidade-pessoas">
-          <div>
-            <label for="adultos" class="font-2-m p5">Quantos adultos?</label>
-            <input type="number" id="adultos" name="adultos" class="font-2-m c10" required>
-          </div>
-          <div>
-            <label for="criancas" class="font-2-m p5">Quantas crianças?</label>
-            <input type="number" id="criancas" name="criancas" class="font-2-m c10">
-          </div>
+        <div>
+          <label for="adultos" class="font-2-m p5">Quantos adultos?</label>
+          <input type="number" id="adultos" name="adultos" class="font-2-m c10" required>
+        </div>
+        <div>
+          <label for="observacoes" class="font-2-m p5">Observações</label>
+          <textarea type="text" id="observacoes" name="observacoes" class="font-2-m c10"></textarea>
         </div>
         <button type="submit" class="font-2-m botao-2">Confirmar</button>
       </form> 
