Correções de design e inicialização das páginas de presentes e orientações

--- a/rsvp.html
+++ b/rsvp.html
@@ -27,7 +27,7 @@
           <ul class="font-1-m c1">
             <li><a href="./index.html">Nossa História</a></li>
             <li><a href="./orientacoes.html">Orientações</a></li>
-            <li><a href="./rsvp.html">Confirme sua presença!</a></li>
+            <li><a href="./rsvp.html" class="ativo">Confirme sua presença!</a></li>
           </ul>
         </div>
       </nav>
@@ -41,7 +41,7 @@
 
       <div class="header-menu-right">
         <ul class="font-1-m botao-1">
-          <li class=""><a href="#presentes">Escolha seu presente</a></li>
+          <li class=""><a href="./presentes.html">Escolha seu presente</a></li>
         </ul>
       </div>
     </div>
@@ -51,15 +51,16 @@
         <li><a href="./index.html">Nossa História</a></li>
         <li><a href="./orientacoes.html">Orientações</a></li>
         <li><a href="./presentes.html">Escolha seu presente</a></li>
-        <li><a href="./rsvp.html">Confirme sua presença!</a></li>
+        <li><a href="./rsvp.html" class="ativo">Confirme sua presença!</a></li>
       </ul>
     </nav>
   </header>
 
+  <div class="title">
+    <h2 class="font-1-l p5">Confirme sua presença!</h2>
+  </div>
+  
   <main class="container-bg">
-    <div class="title">
-      <h2 class="font-1-l p5">Confirme sua presença!</h2>
-    </div>
     <div class="container">
       <form action=".">
         <div>
@@ -100,7 +101,7 @@
       <div class="contato font-2-m c1">
         <div class="contato-item">
           <span>Busca um visual único para o seu projeto?</span>
-          <span>Solicite um site personalizado com design exclusivo!</span>
+          <span>Solicite seu orçamento para um site personalizado com design exclusivo!</span>
         </div>
         <div class="contato-item">
           <a href="mailto: nathaliadagort@gmail.com" target="_blank">nathaliadagort@gmail.com</a>
@@ -112,7 +113,5 @@
       </div>
     </div>
   </footer>
-
 </body>
-
 </html>
