--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="menu-desktop">
         <div class="header-menu-left">
           <ul class="font-1-m c1">
-            <li><a href="./index.html">Nossa História</a></li>
+            <li><a href="./index.html" class="ativo">Nossa História</a></li>
             <li><a href="./orientacoes.html">Orientações</a></li>
             <li><a href="./rsvp.html">Confirme sua presença!</a></li>
           </ul>
@@ -41,14 +41,14 @@
 
       <div class="header-menu-right">
         <ul class="font-1-m botao-1">
-          <li class=""><a href="#presentes">Escolha seu presente</a></li>
+          <li class=""><a href="./presentes.html">Escolha seu presente</a></li>
         </ul>
       </div>
     </div>
 
     <nav class="menu-mobile">
       <ul class="font-1-m c1">
-        <li><a href="./index.html">Nossa História</a></li>
+        <li><a href="./index.html" class="ativo">Nossa História</a></li>
         <li><a href="./orientacoes.html">Orientações</a></li>
         <li><a href="./presentes.html">Escolha seu presente</a></li>
         <li><a href="./rsvp.html">Confirme sua presença!</a></li>
@@ -140,7 +140,7 @@
       <div class="contato font-2-m c1">
         <div class="contato-item">
           <span>Busca um visual único para o seu projeto?</span>
-          <span>Solicite um site personalizado com design exclusivo!</span>
+          <span>Solicite seu orçamento para um site personalizado com design exclusivo!</span>
         </div>
         <div class="contato-item">
           <a href="mailto: nathaliadagort@gmail.com" target="_blank">nathaliadagort@gmail.com</a>
@@ -152,7 +152,5 @@
       </div>
     </div>
   </footer>
-
 </body>
-
 </html>
