Início lista presentes

--- a/presentes.html
+++ b/presentes.html
@@ -60,6 +60,33 @@
     <h2 class="font-1-l p5">Lista de presentes</h2>
   </div>
 
+  <main class="presentes">
+    <div class="container-presente">
+      <img src="./src/img/presentes/1.png" alt="Uma mão colocando dinheiro em um cofrinho">
+      <div class="desc-preco">
+        <span class="font-2-m p5 desc">Pra não dizer que não dei nada</span>
+        <span class="font-2-m c9 preco">R$50,00</span>
+      </div>
+      <a href="#" class="botao-2 font-2-m">Comprar agora</a>
+    </div>
+
+    <div class="container-presente">
+      <img src="./src/img/presentes/1.png" alt="Uma mão colocando dinheiro em um cofrinho">
+      <div class="desc-preco">
+        <span class="font-2-m p5 desc">Pra não dizer que não dei nada</span>
+        <span class="font-2-m c9 preco">R$50,00</span>
+      </div>
+      <a href="#" class="botao-2 font-2-m">Comprar agora</a>
+    </div>
+    
+    <div class="container-presente">
+      <img src="./src/img/presentes/1.png" alt="Uma mão colocando dinheiro em um cofrinho">
+      <div class="desc-preco">
+        <span class="font-2-m p5 desc">Pra não dizer que não dei nada</span>
+        <span class="font-2-m c9 preco">R$50,00</span>
+      </div>
+      <a href="#" class="botao-2 font-2-m">Comprar agora</a>
+    </div>
   </main>
 
   <footer class="footer-bg">
