--- a/rsvp.html
+++ b/rsvp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
@@ -16,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
 
-  <script type="module" src="./src/scripts/main.js"></script>
+  <script src="./src/scripts/main.js" type="module" defer></script>
 </head>
 
 <body id="rsvp">
@@ -62,26 +62,26 @@
   
   <main class="container-bg">
     <div class="container">
-      <form action=".">
+      <form id="form">
         <div>
           <label for="nome" class="font-2-m p5">Nome completo</label>
           <input type="text" id="nome" name="nome" placeholder="Insira seu nome" class="font-2-m c10" required>
         </div>
         <div>
           <label for="telefone" class="font-2-m p5">Telefone</label>
-          <input type="text" id="telefone" name="telefone" placeholder="(49) 99999-9999" class="font-2-m c10" required>
+          <input type="tel" id="telefone" name="telefone" placeholder="(49) 99999-9999" class="font-2-m c9" required>
         </div>
         <div>
           <label for="email" class="font-2-m p5">E-mail</label>
-          <input type="email" id="email" name="email" placeholder="seuemail@mail.com" class="font-2-m c10" required>
+          <input type="email" id="email" name="email" placeholder="seuemail@mail.com" class="font-2-m c9" required>
         </div>
         <div>
           <label for="adultos" class="font-2-m p5">Quantos adultos?</label>
-          <input type="number" id="adultos" name="adultos" class="font-2-m c10" required>
+          <input type="number" id="adultos" name="adultos" class="font-2-m c9" required>
         </div>
         <div>
           <label for="observacoes" class="font-2-m p5">Observações</label>
-          <textarea type="text" id="observacoes" name="observacoes" class="font-2-m c10"></textarea>
+          <textarea id="observacoes" name="observacoes" class="font-2-m c9"></textarea>
         </div>
         <button type="submit" class="font-2-m botao-2">Confirmar</button>
       </form> 
