--- a/rsvp.html
+++ b/rsvp.html
@@ -83,7 +83,7 @@
           <label for="observacoes" class="font-2-m p5">Observações</label>
           <textarea id="observacoes" name="observacoes" class="font-2-m c9"></textarea>
         </div>
-        <button type="submit" class="font-2-m botao-2">Confirmar</button>
+        <button type="submit" class="font-2-m botao-2">Enviar via Whatsapp</button>
       </form> 
     </div>
   </main>
