--- a/orientacoes.html
+++ b/orientacoes.html
@@ -60,7 +60,85 @@
     <h2 class="font-1-l p5">Orientações</h2>
   </div>
 
-  </main>
+  <article class="container-bg-aviso">
+    <div class="container-aviso">
+      <p class="font-2-m c11">Queridos convidados,</p>
+      <p class="font-2-m c11">Sabemos que os pequenos alegram qualquer festa, mas desta vez queremos que papais e mamães tenham uma noite só para eles. Por isso, nosso evento é destinado aos adultos.</p>
+      <p class="font-2-m c11">Agradecemos a compreensão!</p>
+    </div>
+  </article>
+
+  <article class="container-bg local">
+    <div class="container">
+      <div class="flower-2-left">
+        <img src="./src/img/dec/flower-2-left.svg" alt="" width="292" height="253">
+      </div>
+      <div class="local-img">
+        <img src="./src/img/pictures/fonte.jpg" alt="" width="1000" height="666">
+      </div>
+      <div class="local-text">
+        <h2 class="font-1-l p6">Cerimônia e Recepção</h2>
+  
+        <div class="endereco">
+          <h3 class="font-1-m p5">Villa Casarão</h3>
+          <p class="font-2-m c11"><a href="https://maps.app.goo.gl/4gkv92sPX4KAm1fD9" target="_blank">Rod. Baldicero Filomeno, 11789</a></p>
+          <p class="font-2-m c11"><a href="https://maps.app.goo.gl/4gkv92sPX4KAm1fD9" target="_blank">Ribeirão da Ilha</a></p>
+          <p class="font-2-m c11"><a href="https://maps.app.goo.gl/4gkv92sPX4KAm1fD9" target="_blank">Florianópolis - SC</a></p>
+        </div>
+      </div>
+      <div class="flower-2-right">
+        <img src="./src/img/dec/flower-2-right.svg" alt="" width="292" height="253">
+      </div>
+    </div>
+  </article>
+
+  <article class="container-bg dicas">
+    <div class="container">
+      <h2 class="font-1-l p6">Dicas Úteis</h2>
+  
+      <div class="dica-item hotel">
+        <h3 class="font-1-m p6">Hotel</h3>
+        <ul>
+          <li>
+            <a href="https://www.iatehotel.com.br" target="_blank" class="font-2-m c11">Iate Hotel Florianópolis</a>
+            <p class="font-2-m c11">Hotel mais próximo do local do evento</p>
+            <p class="font-2-m c11">(30 minutos de distância)</p>
+          </li>
+        </ul>
+      </div>
+  
+      <div class="dica-item pousada">
+        <h3 class="font-1-m p6">Pousadas</h3>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/pousadaecomar" target="_blank" class="font-2-m c11">Pousada Ecomar</a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/prainhadanina" target="_blank" class="font-2-m c11">Pousada Prainha da Nina</a>
+          </li>
+        </ul>
+      </div>
+  
+      <div class="dica-item airbnb">
+        <h3 class="font-1-m p6">AirBnb</h3>
+        <ul>
+          <li>
+            <a href="https://www.airbnb.com.br/a/discover" target="_blank" class="font-2-m c11">Há algumas opções de casas de temporada bem próximas ao Villa Casarão!</a>
+          </li>
+        </ul>
+      </div>
+  
+      <div class="dica-item cabelo-make">
+        <h3 class="font-1-m p6">Cabelo & Make</h3>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/chamabebell" target="_blank" class="font-2-m c11">Bebell - @chamabebell</a>
+            <p class="font-2-m c11">Profissionais que atendem onde você estiver hospedada!</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </article>
 
   <footer class="footer-bg">
     <div class="footer">
