--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
     </nav>
   </header>
 
+  <audio id="audio"></audio>
+
+  <div id="modal" class="modal">
+    <div class="modal-content container">
+      <span class="font-1-m c12">Esse site possui uma playlist musical. Deseja que ela seja reproduzida?</span>
+      <div class="modal-buttons">
+        <button id="sim" class="botao font-1-s p5">Sim</button>
+        <button id="nao" class="botao font-1-s p5">Não</button>
+      </div>
+    </div>
+  </div>
+
   <main class="intro-bg">
     <div class="intro">
       <img src="./src/img/dec/monograma.svg" alt="Emanuele & Lucas" width="400" height="292">
