--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
 
   <script src="./src/scripts/main.js" type="module" defer></script>
 </head>
@@ -65,6 +66,20 @@
         <button id="sim" class="botao font-1-s p5">Sim</button>
         <button id="nao" class="botao font-1-s p5">Não</button>
       </div>
+    </div>
+  </div>
+
+  <div class="music-icon font-2-l c3" id="musicIcon">
+    <span class="material-symbols-outlined">music_note</span>
+  </div>
+
+  <div class="player" id="player">
+    <div class="titulo font-1-m c1" id="tituloMusica">Nenhuma música</div>
+    <div class="controles">
+      <span id="prev" class="material-symbols-outlined font-1-m c1">skip_previous</span>
+      <span id="play" class="material-symbols-outlined font-1-m c1">play_arrow</span>
+      <span id="pause" class="material-symbols-outlined font-1-m c1">pause</span>
+      <span id="next" class="material-symbols-outlined font-1-m c1">skip_next</span>
     </div>
   </div>
 
