--- a/index.html
+++ b/index.html
@@ -84,8 +84,13 @@
   </div>
 
   <main class="intro-bg">
-    <div class="intro">
+    <!-- <div class="intro">
       <img src="./src/img/dec/monograma.svg" alt="Emanuele & Lucas" width="400" height="292">
+    </div> -->
+    <div class="intro-left">
+    </div>
+    <div class="intro-right">
+      <img src="./src/img/dec/monograma.svg">
     </div>
   </main>
 
