--- a/orientacoes.html
+++ b/orientacoes.html
@@ -106,13 +106,13 @@
       </div>
       <div class="local-text">
         <h2 class="font-1-l p6">Cerimônia e Recepção</h2>
-  
         <div class="endereco">
           <h3 class="font-1-m p5">Villa Casarão</h3>
           <p class="font-2-m c11"><a href="https://maps.app.goo.gl/4gkv92sPX4KAm1fD9" target="_blank">Rod. Baldicero Filomeno, 11789</a></p>
           <p class="font-2-m c11"><a href="https://maps.app.goo.gl/4gkv92sPX4KAm1fD9" target="_blank">Ribeirão da Ilha</a></p>
           <p class="font-2-m c11"><a href="https://maps.app.goo.gl/4gkv92sPX4KAm1fD9" target="_blank">Florianópolis - SC</a></p>
         </div>
+        <span class="font-2-m c11">29.11.25 | 15h</span>
       </div>
       <div class="flower-2-right">
         <img src="./src/img/dec/flower-2-right.svg" alt="" width="292" height="253">
